name:                houston
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/houston
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Acme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Fund
                     , Data.Fund
                     , Data.Environment
  build-depends:       base >= 4.7 && < 5
                     , postgresql-simple
                     , aeson
                     , text

executable houston
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base
                     , houston
                     , scotty
                     , text
                     , aeson
                     , wai-extra
                     , transformers
                     , postgresql-simple

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , houston
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/githubuser/houston
